tests/transpiler/x/py/outer_join.py
# Code generated by Mochi v0.10.34 - DO NOT EDIT
from dataclasses import dataclass
from typing import List, Dict

@dataclass
class Customer:
    id: int
    name: str

customers = [Customer(1, "Alice"), Customer(2, "Bob"), Customer(3, "Charlie"), Customer(4, "Diana")]
@dataclass
class Order:
    id: int
    customerId: int
    total: int

orders = [Order(100, 1, 250), Order(101, 2, 125), Order(102, 1, 300), Order(103, 5, 80)]
@dataclass
class Result:
    order: any
    customer: any

result = [{"order": o, "customer": c} for o in orders for c in customers if o["customerId"] == c["id"]] + [(lambda c: {"order": o, "customer": c})(None) for o in orders if not any([o["customerId"] == c["id"] for c in customers])] + [(lambda o: {"order": o, "customer": c})(None) for c in customers if not any([o["customerId"] == c["id"] for o in orders])]
print("--- Outer Join using syntax ---")
for row in result:
    if row["order"]:
        if row["customer"]:
            print(" ".join(str(x) for x in ["Order", row["order"]["id"], "by", row["customer"]["name"], "- $", row["order"]["total"]]).rstrip())
        else:
            print(" ".join(str(x) for x in ["Order", row["order"]["id"], "by", "Unknown", "- $", row["order"]["total"]]).rstrip())
    else:
        print(" ".join(str(x) for x in ["Customer", row["customer"]["name"], "has no orders"]).rstrip())
